...
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="1500"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textSize="64sp" />

                <TextView
                    android:layout_width="wrap_content"
...
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="Calculate" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/running"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
